test/Harper/Tests/Bad/issue016_ifElseIfDefiniteAssignment.har
f :: Integer -> Integer;
f n = {
  var (x :: Integer);
  
  if (n == 42) {
    x := n;
  }
  else if (n < 42) {
    x := 0;
  }

  (result :: Integer) = x + n;
  return result;
};

main :: Integer;
main = f 42;