test/Harper/Tests/Bad/issue016_ifElseIfDefiniteAssignment.out
Error: variable `x` is not definitely assigned at point of use.
During evaluation of:
  x
Located at line 12 column 25

Execution terminated with an error: type error.